--- a/src/partials/navigation.html
+++ b/src/partials/navigation.html
@@ -18,8 +18,8 @@
     </div>
     <ul id="main-nav" class="main-navigation">
       <li><a href="index.html">Home</a></li>
-      <li><a href="index.html">About</a></li>
-      <li><a href="index.html">Our Services</a></li>
+      <li><a href="about.html">About</a></li>
+      <li><a href="services.html">Our Services</a></li>
       <li><a href="index.html">Job Portfolio</a></li>
       <li><a href="index.html">Contact Us</a></li>
     </ul>
