--- a/src/partials/patio-room-archive.html
+++ b/src/partials/patio-room-archive.html
@@ -11,14 +11,16 @@
 <div class="project-archives">
   <div class="project-archive">
     <div class="overlay-container">
-      <a href="porch_allandale.html"
+      <a href="porch_projects/porch_allandale.html"
         ><img
           src="assets/img/Features/KitchenGallery_Features/blountville_harrtown_kitchen.jpg"
           alt=""
       /></a>
       <div class="overlay">
         <p>
-          <a href="porch_allandale.html">Screen Porch - Allandale Kingsport</a>
+          <a href="porch_projects/porch_allandale.html"
+            >Screen Porch - Allandale Kingsport</a
+          >
         </p>
       </div>
     </div>
@@ -26,12 +28,12 @@
 
   <div class="project-archive">
     <div class="overlay-container">
-      <a href="porch_kingsport_screenroom.html">
+      <a href="porch_projects/porch_kingsport_screenroom.html">
         <img src="assets/img/Features/bloomingdale_screenporch.jpg" alt="" />
       </a>
       <div class="overlay">
         <p>
-          <a href="porch_kingsport_screenroom.html"
+          <a href="porch_projects/porch_kingsport_screenroom.html"
             >Screen Porch - Bloomingdle Kingsport</a
           >
         </p>
@@ -41,12 +43,14 @@
 
   <div class="project-archive">
     <div class="overlay-container">
-      <a href="porch_boonescreek.html">
+      <a href="porch_projects/porch_boonescreek.html">
         <img src="assets/img/Features/boonescreek_ScreenPorch.jpg" alt="" />
       </a>
       <div class="overlay">
         <p>
-          <a href="porch_boonescreek.html">Screen Porch in Boones Creek</a>
+          <a href="porch_projects/porch_boonescreek.html"
+            >Screen Porch in Boones Creek</a
+          >
         </p>
       </div>
     </div>
