--- a/src/partials/room-addition-archive.html
+++ b/src/partials/room-addition-archive.html
@@ -8,12 +8,12 @@
   <div class="project-archives">
   <div class="project-archive">
     <div class="overlay-container">
-      <a href="project-detail.html"
+      <a href="roomaddition_projects/addition_billingsley.html"
         ><img src="/assets/img/Features/roomaddition_features/kingsport_ridgefields_addition.jpg" alt=""
       /></a>
       <div class="overlay">
         <p>
-          <a href="project-detail.html">Kingsport - Ridgefields Addition and Sunroom</a>
+          <a href="roomaddition_projects/addition_billingsley.html">Kingsport - Ridgefields Addition and Sunroom</a>
         </p>
       </div>
     </div>
@@ -22,11 +22,11 @@
 
   <div class="project-archive">
     <div class="overlay-container">
-      <img src="/assets/img/Features/roomaddition_features/kingsport_chesterfield_addition.jpg" alt="" />
+      <a href="roomaddition_projects/addition_chesterfield_08102018.html"><img src="/assets/img/Features/roomaddition_features/kingsport_chesterfield_addition.jpg" alt="" /></a>
       <p>
           <div class="overlay">
               <p>
-                <a href="project-detail.html">Colonial Heights - Addition and Screened Porch</a>
+                <a href="roomaddition_projects/addition_chesterfield_08102018.html">Colonial Heights - Addition and Screened Porch</a>
               </p>
             </div>
     </p>
@@ -35,10 +35,10 @@
 
   <div class="project-archive">
     <div class="overlay-container">
-      <img src="/assets/img/Features/roomaddition_features/kingsport_watauga_addition.jpg" alt="" />
-      <div class="overlay">
+      <a href="roomaddition_projects/addition_wataugastret.html"><img src="/assets/img/Features/roomaddition_features/kingsport_watauga_addition.jpg" alt="" />
+        <div class="overlay"></a>
           <p>
-            <a href="project-detail.html">Kingsport - Watauga Street Addition</a>
+            <a href="roomaddition_projects/addition_wataugastret.html">Kingsport - Watauga Street Addition</a>
           </p>
         </div>
     </div>
@@ -46,10 +46,10 @@
 
   <div class="project-archive">
         <div class="overlay-container">
-          <img src="/assets/img/Features/roomaddition_features/gray_summerville_extension.jpg" alt="" />
+          <a href="roomaddition_projects/addition_steeplechase.html"><img src="/assets/img/Features/roomaddition_features/gray_summerville_extension.jpg" alt="" /></a>
           <div class="overlay">
               <p>
-                <a href="project-detail.html">Gray, TN - Room Addition and Sunroom</a>
+                <a href="roomaddition_projects/addition_steeplechase.html">Gray, TN - Room Addition and Sunroom</a>
               </p>
             </div>
         </div>
@@ -57,10 +57,10 @@
 
   <div class="project-archive">
     <div class="overlay-container">
-      <img src="/assets/img/Features/roomaddition_features/kingsport_room_addition.jpg" alt="" />
+      <a href="roomaddition_projects/addition_kingsport.html"><img src="/assets/img/Features/roomaddition_features/kingsport_room_addition.jpg" alt="" /></a>
       <div class="overlay">
           <p>
-            <a href="project-detail.html">Kingsport - Addition</a>
+            <a href="roomaddition_projects/addition_kingsport.html">Kingsport - Addition</a>
           </p>
         </div>
     </div>
@@ -68,10 +68,10 @@
 
   <div class="project-archive">
     <div class="overlay-container">
-      <img src="/assets/img/Features/roomaddition_features/graytn_room_addition.jpg" alt="" />
+      <a href="roomaddition_projects/addition_partridgeplace.html"><img src="/assets/img/Features/roomaddition_features/graytn_room_addition.jpg" alt="" /></a>
       <div class="overlay">
           <p>
-            <a href="project-detail.html">Gray, TN - Room Addition and Sunroom</a>
+            <a href="roomaddition_projects/addition_partridgeplace.html">Gray, TN - Room Addition and Sunroom</a>
           </p>
         </div>
     </div>
@@ -79,10 +79,10 @@
 
   <div class="project-archive">
     <div class="overlay-container">
-      <img src="/assets/img/Features/roomaddition_features/kingsport_westcartersvalley_addition.jpg" alt="" />
+      <a href="roomaddition_projects/addition_westcartersvalley.html"><img src="/assets/img/Features/roomaddition_features/kingsport_westcartersvalley_addition.jpg" alt="" /></a>
       <div class="overlay">
           <p>
-            <a href="project-detail.html">Kingsport - West Carter's Valley Addition</a>
+            <a href="roomaddition_projects/addition_westcartersvalley.html">Kingsport - West Carter's Valley Addition</a>
           </p>
         </div>
     </div>
@@ -90,10 +90,10 @@
 
   <div class="project-archive">
     <div class="overlay-container">
-      <img src="/assets/img/Features/roomaddition_features/mtcarmel_bathroom_addition.jpg" alt="" />
+        <a href="roomaddition_projects/addition_westcartersvalley.html"><img src="/assets/img/Features/roomaddition_features/mtcarmel_bathroom_addition.jpg" alt="" /></a>
       <div class="overlay">
           <p>
-            <a href="project-detail.html">Mount Carmel - Bathroom and Addition</a>
+            <a href="roomaddition_projects/addition_westcartersvalley.html">Mount Carmel - Bathroom and Addition</a>
           </p>
         </div>
     </div>
