--- a/src/partials/other-jobs-archive.html
+++ b/src/partials/other-jobs-archive.html
@@ -11,12 +11,12 @@
 <div class="project-archives">
   <div class="project-archive">
     <div class="overlay-container">
-      <a href="porch_arbor.html"
+      <a href="porch_projects/porch_arbor.html"
         ><img src="assets/img/Features/churchhill_arbor.jpg" alt=""
       /></a>
       <div class="overlay">
         <p>
-          <a href="porch_arbor.html">Church Hill Arbor</a>
+          <a href="porch_projects/porch_arbor.html">Church Hill Arbor</a>
         </p>
       </div>
     </div>
@@ -24,7 +24,7 @@
 
   <div class="project-archive">
     <div class="overlay-container">
-      <a href="porch_cooksvalley_arbor.html">
+      <a href="porch_projects/porch_cooksvalley_arbor.html">
         <img
           src="assets/img/Features/KitchenGallery_Features/kingsport_ridgefields_kitchen.jpg"
           alt=""
@@ -32,7 +32,9 @@
       </a>
       <div class="overlay">
         <p>
-          <a href="porch_cooksvalley_arbor.html">Cooks Valley Arbor</a>
+          <a href="porch_projects/porch_cooksvalley_arbor.html"
+            >Cooks Valley Arbor</a
+          >
         </p>
       </div>
     </div>
@@ -40,7 +42,7 @@
 
   <div class="project-archive">
     <div class="overlay-container">
-      <a href="addition_jonesborough_11202018.html">
+      <a href="roomaddition_projects/addition_jonesborough_11202018.html">
         <img
           src="assets/img/Features/roomaddition_features/jonesborough_BellHome.jpg"
           alt=""
@@ -48,7 +50,9 @@
       </a>
       <div class="overlay">
         <p>
-          <a href="addition_jonesborough_11202018.html">Jonesborough Arbor</a>
+          <a href="roomaddition_projects/addition_jonesborough_11202018.html"
+            >Jonesborough Arbor</a
+          >
         </p>
       </div>
     </div>
@@ -56,7 +60,7 @@
 
   <div class="project-archive">
     <div class="overlay-container">
-      <a href="addition_wataugastret.html">
+      <a href="roomaddition_projects/addition_wataugastret.html">
         <img
           src="assets/img/Features/roomaddition_features/kingsport_watauga_addition.jpg"
           alt=""
@@ -64,7 +68,9 @@
       </a>
       <div class="overlay">
         <p>
-          <a href="addition_wataugastret.html">Garage Addition</a>
+          <a href="roomaddition_projects/addition_wataugastret.html"
+            >Garage Addition</a
+          >
         </p>
       </div>
     </div>
